some project restructuring, downgraded to 1.51 (because of rust-analyzer not working properly), exercises from 2.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1"
+criterion = "0.3.4"
+
+[profile.bench]
+debug = true
+
+[[bench]]
+name = "sorts"
+harness = false
